todoyu portal extension changelog

portal 1.1.3 - 2011-12-13
	* Changed: Code cleanup
	* Changed: Support phpUnit 3.6

portal 1.1.2 - 2011-11-17
	* Changed: Portal does not add anymore contextmenu items to deleted tasks
	* Translation: Polish

portal 1.1.1 - 2011-09-15
	* Minor cleanups

portal 1.1.0 - 2011-06-17
	* Feature: Added init-rights-check for controller
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name